--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <meta content="Học tập, quản lý sinh" itemprop="headline" property="og:title" />
         <meta content="Trang chủ" itemprop="description" property="og:description" />
         <!-- END META FOR FACEBOOK -->
-        <link rel="icon" type="image/x-icon" href="../assets/img/logo.svg" />
+        <link rel="icon" type="image/x-icon" href="./assets/img/logo.svg" />
     </head>
     <body>
         <div class="app">
