--- a/student.html
+++ b/student.html
@@ -13,7 +13,7 @@
         <!-- BOOTSTRAP ICON -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" />
         <!-- BOOTSTRAP CSS -->
-        <link rel="stylesheet" href="./assets/css/bootstrap/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
+        <link rel="stylesheet" href="./assets/css/bootstrap/bootstrap.min.css" />
         <!-- CSS ME -->
         <link rel="stylesheet" href="./assets/css/base.css" />
         <link rel="stylesheet" href="./assets/css/main.css" />
@@ -633,8 +633,8 @@
         </div>
 
         <!-- JS JQUERY BOOTSTRAP -->
-        <script src="./assets/js/jquery-bootstrap/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-        <script src="./assets/js/js-bootstrap/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+        <script src="./assets/js/jquery-bootstrap/jquery-3.5.1.min.js"></script>
+        <script src="./assets/js/js-bootstrap/bootstrap.min.js"></script>
 
         <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
         <script src="./assets/js/global.js"></script>
