--- a/teacher.html
+++ b/teacher.html
@@ -14,8 +14,7 @@
     <!-- BOOTSTRAP ICON -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" />
     <!-- BOOTSTRAP CSS -->
-    <link rel="stylesheet" href="./assets/css/bootstrap/bootstrap.min.css"
-        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
+    <link rel="stylesheet" href="./assets/css/bootstrap/bootstrap.min.css"/>
     <!-- CSS ME -->
     <link rel="stylesheet" href="./assets/css/base.css" />
     <link rel="stylesheet" href="./assets/css/main.css" />
@@ -23,8 +22,7 @@
     <!-- CSS TEACHER -->
     <link rel="stylesheet" href="./assets/css/teacher.css" />
     <!-- JQUERY -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
-        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <title>CHECKPROSTUDIES</title>
     <meta name="description" content="Tạo một tài khoản để đăng nhập hệ thống CHECKPROSTUDIES. Kết nối giữa nhà trường, gia đình và học viên. Cập nhật thông tin từ nhà trường nhanh chóng, chính xác hơn bao giờ hết. Hỗ trợ học viên và gia đình xuyên suốt quá trình học tập và làm việc tại nhà trường."/>
     <meta name="keywords" content="Học tập, quản lý sinh viên, phụ huynh học sinh, check sinh viên." />
@@ -706,11 +704,8 @@
     </div>
 
     <!-- JS JQUERY BOOTSTRAP -->
-    <script src="./assets/js/jquery-bootstrap/jquery-3.5.1.min.js"
-        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script src="./assets/js/js-bootstrap/bootstrap.min.js"
-        integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
-        crossorigin="anonymous"></script>
+    <script src="./assets/js/jquery-bootstrap/jquery-3.5.1.min.js"></script>
+    <script src="./assets/js/js-bootstrap/bootstrap.min.js"></script>
     <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
     <script src="./assets/js/global.js"></script>
     <script src="./assets/js/teacher.js"></script>
