--- a/Parent.html
+++ b/Parent.html
@@ -339,7 +339,7 @@
                 </div>
                 <div class="copyright d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
                     <p class="asdad">© 2022 Code and me. All copyrights reserved.</p>
-                    <h1 class="logo">
+                    <h1 class="logo-ft">
                         <a href="#">
                             <svg style="width: 150px;" viewBox="141.794 -9.521 346.645 221.513" preserveAspectRatio="xMinYMin" xmlns="http://www.w3.org/2000/svg">
                                 <g transform="matrix(0.1, 0, 0, -0.1, 34.089233, 346.350281)" fill="#000" stroke="none">
